# py-libtea

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  libtea.cdx.json  pyproject.toml
.github/workflows/: ci.yaml  codeql.yaml  pypi.yaml  sbomify.yaml
docs/: FUTURE.md  cli.md  conformance.md  tea-cli.1
docs/plans/: 2025-02-25-tea-client-design.md  2026-02-25-v0.2.0-design.md  2026-02-26-v0.3.0-design.md
libtea/: __init__.py  _cli_entry.py  _cli_fmt.py  _http.py  cli.py  client.py  discovery.py  exceptions.py  models.py
src/libtea/: __init__.py  _cli_entry.py  _cli_fmt.py  _constants.py  _hashing.py  _http.py  _security.py  _validation.py  cli.py  client.py  discovery.py  exceptions.py  models.py  protocols.py  server.py
src/libtea/conformance/: __init__.py  _checks.py  _runner.py  _types.py  plugin.py
tests/: conftest.py  test_cli.py  test_cli_fmt.py  test_client.py  test_discovery.py  test_download.py  test_http.py  test_integration.py  test_models.py  test_version.py
tests/cli/: test_cli.py  test_cli_fmt.py
tests/client/: test_cache.py  test_client.py  test_discovery.py  test_download.py  test_http.py  test_iterators.py
tests/integration/: test_integration.py
tests/unit/: test_cli_entry.py  test_conformance_checks.py  test_conformance_plugin.py  test_conformance_runner.py  test_conformance_types.py  test_exceptions.py  test_hashing.py  test_models.py  test_protocols.py  test_security.py  test_server.py  test_validation.py  test_version.py
