[project]
name = "libtea"
version = "0.1.0"
description = "Python client library for the Transparency Exchange API (TEA)"
authors = [{ name = "sbomify", email = "hello@sbomify.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
keywords = ["tea", "transparency-exchange-api", "sbom", "vex", "supply-chain", "security", "cyclonedx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sbomify/py-libtea"
Repository = "https://github.com/sbomify/py-libtea"
Documentation = "https://github.com/sbomify/py-libtea#readme"
"Bug Tracker" = "https://github.com/sbomify/py-libtea/issues"
Changelog = "https://github.com/sbomify/py-libtea/releases"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-cov>=4.1.0,<5",
    "ruff>=0.12.0,<0.13",
    "pre-commit>=4.2.0,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["libtea"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=libtea --cov-report=term-missing"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
