[project]
name = "libtea"
version = "0.2.0"
description = "Python client library for the Transparency Exchange API (TEA)"
authors = [{ name = "sbomify", email = "hello@sbomify.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
keywords = ["tea", "transparency-exchange-api", "sbom", "vex", "supply-chain", "security", "cyclonedx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.32.4,<3",
    "pydantic>=2.1.0,<3",
    "semver>=3.0.4,<4",
]

[project.urls]
Homepage = "https://github.com/sbomify/py-libtea"
Repository = "https://github.com/sbomify/py-libtea"
Documentation = "https://github.com/sbomify/py-libtea#readme"
"Bug Tracker" = "https://github.com/sbomify/py-libtea/issues"
Changelog = "https://github.com/sbomify/py-libtea/releases"

[project.optional-dependencies]
cli = ["typer>=0.12.0,<1", "rich>=13.0.0"]

[project.scripts]
tea-cli = "libtea._cli_entry:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10",
    "pytest-cov>=7.0.0,<8",
    "ruff>=0.15.0,<0.16",
    "pre-commit>=4.5.0,<5",
    "responses>=0.26.0,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/libtea"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/libtea --cov-report=term-missing --cov-branch"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
